# OpenGPTxML

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/opengptxml/builder/: docx.py  docx_template.py  helpers.py
src/opengptxml/converter/: html_2_openxml.py  markdown_2_html.py  markdown_2_openxml.py
src/opengptxml/schema/: converter_settings.py  converter_styles.py  style.py
src/opengptxml/styles/: compiler.py  loader.py
src/tests/: __init__.py
src/tests/builder/docx/: test_build_docx.py
src/tests/data/: sample_text.md  tests.builder.docx.test_build_docx.docx
